--- a/index.html
+++ b/index.html
@@ -4,13 +4,27 @@
     <meta charset="UTF-8"> <!--A head címke a HTML-ben a dokumentum head részének meghatározására szolgál-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!--A head címke a HTML-ben a dokumentum head részének meghatározására szolgál-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>teszt</title>  <!--html nevét határozza a title meg-->
+    <title>Programozás</title> <!--html nevét határozza a title meg-->
+    <style>
+    img {
+        border: 5px solid #545
+    }
+    </style>
+    <a href="nem.html" target="_blank">Aloldal</a> <!-- a href az oldalváltást teszi lehetővé-->
+    <p> </p>
+
     
 </head>
 
 <body>
         <h1>teszt</h1> <!--a h1 az egy címsor 6 darab alkalmazható kódokban-->
         <img src="letöltés.jfif" alt="kép helye lenne"> <!-- Ez a helyét választja ki a fájlnak ami most egy kép-->
-        <a href="nem.html" target="_blank">Aloldal</a> <!-- a href az oldalváltást teszi lehetővé-->
+            <ol>
+                <li>A megoldandó probléma meghatározása, felmérése a majdani felhasználók igényei alapján, specifikáció készítése                </li>
+                <li>Forrásprogram elkészítése (kódolás)</li>
+                <li>A kész program tesztelése</li>
+                <li>Dokumentáció készítése</li>
+                <li>Alkar</li>
+            </ol>
 </body>
 </html>
