--- a/nem.html
+++ b/nem.html
@@ -5,12 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!--A head címke a HTML-ben a dokumentum head részének meghatározására szolgál-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>igen</title> <!--html nevét határozza a title meg-->
+    <a href="index.html" target="_blank">főoldal</a> <!-- a href az oldalváltást teszi lehetővé-->
+
+    <style>
+        img {
+            border: 5px solid #545
+        }
+        </style>
     
 </head>
 
 <body>
         <h1>teszt ez is</h1> <!--a h1 az egy címsor 6 darab alkalmazható kódokban-->
         <img src="letöltés.jfif" alt="kép helye lenne"> <!-- Ez a helyét választja ki a fájlnak ami most egy kép-->
-        <a href="index.html" target="_blank">főoldal</a> <!-- a href az oldalváltást teszi lehetővé-->
 </body>
 </html>
